# operating_systems_c

./: CMakeLists.txt  README.md  main.c
chapter3/: collatz_conjecture.h  copy_file.h  pid_manager.h  string_reverse.h  zombie_child.h
chapter4/: test_pid_manager.h
programs/: rough.h
resources/: input.txt
